# server/src/routes/authRoutes.ts
@@ -1,6 +1,5 @@
 import express from 'express';
-import { loginController, registerController, meController } from '../controllers/UserController.js';
-import checkAuth from '../utils/checkAuth.js';
+import { loginController, registerController } from '../controllers/UserController.js';
 import { registerValidation } from '../validations/auth.js';
 
 const router = express.Router();
@@ -8,7 +7,5 @@ const router = express.Router();
 router.post('/login', loginController);
 
 router.post('/register', registerValidation, registerController);
-
-router.get('/me', checkAuth, meController);
 
 export default router;
